--- a/gb/22/11/1/n13857250.md
+++ b/gb/22/11/1/n13857250.md
@@ -12,16 +12,6 @@
 <p>徐展元表示，真要说的话，打流感疫苗也是相当热血的事情，回忆起出生至今的感冒经验，他分享，两年前他曾感染A型流感，这是印象最深刻，也最痛苦的体验，流感症状是一般感冒的20倍，甚至妻子也在两天后被传染，当时恰巧是新年假期，变成说哪里都不能去，这是非常惨痛的经验，呼吁大家能勇于走出来，接种流感疫苗。</p>
 <p>责任编辑：吕美琪</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/24/n11608589.md#1">卫生局敦请纽约市民接种流感疫苗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/25/n11610812.md#1">陈肇始吁市民尽早接种流感疫苗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/25/n11612117.md#1">今年流感疫苗升级4价 疾管署：不须减半施打</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/26/n11613297.md#1">市议员顾雅明11/2提供免费打流感疫苗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/14/n14437378.md#1">禁止加味烟 民团盼政府即刻公告</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/14/n14437376.md#1">公费流感抗病毒药剂 扩大使用适用期延长两周</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14434751.md#1">流感疫情飙升 上周挂诊逾18万人次</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14434884.md#1">流感疫情升温 医示警：吸烟恐加重病情</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14434854.md#1">托盟吁设保母退场机制 卫福部：待进一步讨论</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/7/n14432176.md#1">增免疫力抵抗病菌 医：调整气血正常作息</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/21/11/21/n13389104.md#1">北市3诊接连所打错疫苗 最高罚至25万元</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/21/11/21/n13389125.md#1">北市3诊所错打疫苗 依法最高罚25万元</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/21/12/19/n13446022.md#1">后疫情时代桃园SUPER教师表扬 肯定灌溉教育园地</a></li>
@@ -33,27 +23,28 @@
 <li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/7/n13840616.md#1">北荣桃分院为118位未满3岁打错疫苗  裁处25万</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/22/10/14/n13845133.md#1">赖香伶：幼童打错疫苗  卫福部应追踪半年</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/1/n10752825.md#1" target="_blank">共产暴政录：张国焘鄂豫皖根据地肃反</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/17/n10720119.md#1" target="_blank">俞晓薇：迫害好人路不通 中共作恶者务必赎罪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/22/n10994378.md#1" target="_blank">陆文：迫害佛法最终害了自己</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/14/n11258498.md#1" target="_blank">二十年电子游戏狂 因修炼脱胎换骨</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/7/11/n10554901.md#1">“白袍战将”薛仁贵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/4/n14429594.md#1">【古道人生】不相信有鬼神的人听到鬼怎么说？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/8/n14432721.md#1">传承二千年 元宵节俗内涵由来知多少？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/7/n14432297.md#1">【未解之谜】超神奇轮回案例 双胞姐妹灵魂离体回前世</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/6/n14431324.md#1">中华情人节&#8211;元宵  灯火盛会辉映深刻内涵</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436802.md#1">【唐青看时事】川马联盟势如破竹 美政坛新风向</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436693.md#1">【直播】川普在白宫会见莫迪并举行记者会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436809.md#1">【菁英论坛】前记者质疑李克强死遭判刑 权斗残酷</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14435017.md#1">刘诗诗主演《掌心》片酬曝光 折射陆娱圈困境</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/12/n14435292.md#1">袁红冰：北京官场耳语 习被坑惨 痛骂王毅</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14435120.md#1">越南商人非法开采稀土 走私2000多吨至中国</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/10/n14434291.md#1">章子怡晒赏雪照庆生 与9岁女儿笑容明媚</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/10/n14434350.md#1">一连3部影视剧遭滑铁卢 杨幂人气大跌引关注</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14435134.md#1">周润发感伤香港电影萧条 称拍港戏片酬可商量</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436048.md#1">《射雕英雄传》票房不佳 肖战进军大银幕失利</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/12/n14435384.md#1">为何有些人很容易发脾气？ 看看专家怎么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/11/n14434559.md#1">专家警告 在飞机上千万别喝这种饮料</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/13/n14436341.md#1">美国机长：别问飞行员这些烦人的问题</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/7/n14431656.md#1">按错肩颈导致中风 安全徒手按摩这样做</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/2/9/n14433342.md#1">研究：社交媒体使用与成年人易怒上升相关</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650550.md#1">【未解之谜】NASA也无法解释 太阳系神秘入侵者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652776.md#1">【军事情报局】泰柬战争升级 F-16低空轰炸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652899.md#1">【直播】NASA为探索月球、火星所做的准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652954.md#1">【百年真相】半夜鸡不叫：周扒皮冤案揭秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651393.md#1">普渡大学为何指示院系拒收中国留学生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651371.md#1">堕胎变催育 中共黑手再次伸向中国女性</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652089.md#1">巧合还是刻意？中共官微帖文惊现“于朦胧”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651415.md#1">刘诗诗得奖遭临时撤换 主办方“爱奇艺”挨轰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652213.md#1">张柏芝遭索赔逾千万 法庭上情绪失控崩溃痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652972.md#1">消失一年被传死讯 陆网红冯提莫自曝停工内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652371.md#1">同一双袜子可以穿两次以上再洗吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/11/1/n13857250.htm">公费流感疫苗第二阶段即起开打</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/11/1/n13857250.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
